refactored, avoiding calling of read service for construct of unnecessary infos